Fix header on Safari

--- a/src/client/js/react/components/MediaAccounts/MediaAccounts.scss
+++ b/src/client/js/react/components/MediaAccounts/MediaAccounts.scss
@@ -3,8 +3,8 @@
 
 .MediaAccounts {
   display: flex;
-  flex-grow: 0;
   align-items: center;
+  justify-content: center;
   &-account {
     display: inline-flex;
     width: 50px;
